--- a/front_end/css/app-layout.css
+++ b/front_end/css/app-layout.css
@@ -24,7 +24,7 @@ header {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
-  z-index: 1100;
+  z-index: 1000;
 }
 
 .menu-icon {
@@ -145,7 +145,7 @@ input[type="search"]::-webkit-search-cancel-button {
   position: fixed;
   top: 60px;
   left: 0;
-  z-index: 99999!important;
+  z-index: 999;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
